name:                tries
version:             0.1
synopsis:            Simple prefix trie library with generics-driven instance generation
-- description:         
license:             BSD3
license-file:        LICENSE
author:              Eric Mertens
maintainer:          emertens@gmail.com
-- copyright:           
category:            Data
build-type:          Simple
-- extra-source-files:  
cabal-version:       >=1.10
homepage:            http://github.com/glguy/tries
bug-reports:         http://github.com/glguy/tries/issues

library
  exposed-modules:     Data.Trie

  other-extensions:    FlexibleContexts,
                       FlexibleInstances,
                       DefaultSignatures,
                       TypeOperators,
                       TypeFamilies,
                       RankNTypes,
                       ScopedTypeVariables,
                       MultiParamTypeClasses

  build-depends:       base >=4.7 && <4.8,
                       lens >=4.6 && <4.8,
                       containers >=0.5 && <0.6

  hs-source-dirs:      src
  default-language:    Haskell2010

source-repository head
  type: git
  location: git://github.com/glguy/tries.git
